--- a/modulo2/projeto-portfolio/portifolio.css
+++ b/modulo2/projeto-portfolio/portifolio.css
@@ -3,31 +3,50 @@
 body{
  padding: 0px;
  margin: 0px;
- background-image: url(./img/logoJs.jpeg);
- 
- background-repeat: no-repeat ;
+ background-color: #d6d5d5;
  
 }
 
-/* background-image: url(./img/WhatsApp\ Image\ 2022-03-28\ at\ 22.16.00\ \(1\).jpeg);
-background-size: 600px;
-background-repeat: no-repeat ;
-background-position:900px 120px ; */
+.imagem-eu{
+    width: 400px;
+    height: 400px;
+    border: 1px solid blue;
+    position: absolute;
+    top: 400px;
+    left: 600px ;
 
+}
+
+.imagem-logo{
+    
+}
+
+.esfumado{
+    background-color: #d7a289;
+
+
+}
 
 h1{
-    font-family: 'Source Serif Pro', serif;
-    font-size: 60px;
+    font-family:Rugrats Sans, Black Mango Medium;
+    font-size: 90px;
     position: absolute;
-    top:300px;
-    left:200px;
+    top:50px;
+    left: 900px;
+   
 }
 
 h2{
-    font-family: 'Source Serif Pro', serif;
+    font-family: Rugrats Sans, Black Mango Medium;
     font-size: 60px;
     position: absolute;
-    top:400px;
-    left:200px;
+    top:300px;
+    left:1300px;
+   
 }
+p{
+
+}
+
+
 
